# omniscidb

./: CMakeLists.txt
.github/workflows/: cuda.yml  main.yml
ArrowStorage/: ArrowStorage.cpp  ArrowStorage.h
Benchmarks/benchmarks_utils/: CMakeLists.txt  benchmarks_utils.cpp  benchmarks_utils.h
Benchmarks/tpch/: CMakeLists.txt  tpch_bench.cpp
Catalog/: Catalog.cpp
DataMgr/: AbstractBufferMgr.h  AbstractDataProvider.h  DataMgr.cpp  DataMgr.h
DataMgr/BufferMgr/: BufferMgr.h
DataMgr/FileMgr/: FileMgr.h  GlobalFileMgr.h
DataMgr/ForeignStorage/: ForeignStorageInterface.h
DataMgr/PersistentStorageMgr/: PersistentStorageMgr.cpp  PersistentStorageMgr.h
QueryEngine/: CMakeLists.txt  CompilationOptions.cpp  Execute.cpp  RelAlgDagBuilder.h  RelAlgExecutor.cpp  RelAlgExecutor.h
QueryEngine/CostModel/: Connector.h  CostModel.cpp  CostModel.h  DummyCostModel.cpp  DummyCostModel.h  ExtrapolationModel.cpp  ExtrapolationModel.h  Measurements.cpp  Measurements.h
QueryEngine/CostModel/Connectors/: Connector.h
QueryEngine/CostModel/DataSources/: DataSource.cpp  DataSource.h  DwarfBench.cpp  DwarfBench.h  EmptyDataSource.cpp  EmptyDataSource.h
QueryEngine/CostModel/ExtrapolationModels/: ExtrapolationModel.h  LinearExtrapolation.cpp  LinearExtrapolation.h
Tests/: ArrowStorageTest.cpp  CMakeLists.txt  ResultSetTest.cpp
Tests/CostModel/: CostModelTest.cpp
scripts/conda/: test.sh
